# senorge-tools

./: .copier-answers.yml  README.md  pyproject.toml
scripts/: group_by_month.sql
src/: main.py
