[project]
authors = [
  {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"}
]
dependencies = [
  "rasterio>=1.3.6",
  "shapely>=2.0.1",
  "fiona>=1.9.4",
  "tqdm"
]
description = ""
license = {text = "GPL-3.0+"}
name = "senorge_tools"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
tools = [
  "pre-commit"
]

[project.scripts]
"senorge_tools" = "main:cli"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
